@@ -24,8 +24,7 @@ import com.jagrosh.jdautilities.command.Command;
 import com.jagrosh.jdautilities.command.CommandEvent;
 import com.skyblockplus.utils.command.CommandExecute;
 import java.util.List;
-import java.util.stream.Collectors;
-import net.dv8tion.jda.api.interactions.commands.build.CommandData;
+import net.dv8tion.jda.api.interactions.commands.build.SlashCommandData;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -81,7 +80,7 @@ public class UpdateSlashCommands extends Command {
 			.queue();
 	}
 
-	private List<CommandData> generateSlashCommands() {
-		return slashCommandClient.getCommands().stream().map(c -> c.getCommandData().setGuildOnly(true)).collect(Collectors.toList());
+	private List<SlashCommandData> generateSlashCommands() {
+		return slashCommandClient.getCommands().stream().map(c -> c.getFullCommandData().setGuildOnly(true)).toList();
 	}
 }
